fixes right column alignment for the menu

--- a/source/stylesheets/partials/_320.sass
+++ b/source/stylesheets/partials/_320.sass
@@ -23,7 +23,7 @@ ul#nav.about-black
   z-index: 10
   .center
     +container($total-columns, $break-1, $break-2)
-
+    position: relative
   &.black
     +background-image(linear-gradient( rgba(0,0,0, 0.8), rgba(0,0,0,0)))
 
